# targetdialer

./: .env.example  .gitignore  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/db/: models.py  session.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/: auth.ts  middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/meetings/: page.tsx
apps/web/src/lib/db/: index.ts  schema.ts
